# crypto_api_integration_project

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: dependencies.py  httpclient.py  main.py
backend/src/router/: routers.py
backend/src/services/: cmc.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: CryptoCurrencyCard.css  CryptoCurrencyCard.jsx
nginx/: nginx.conf
