[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Grayholm",email = "rodiongrayholm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "aiohttp (>=3.13.1,<4.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "async-lru (>=2.0.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
